# ismr

./: .gitignore  .gitmodules  README.md  main.py  pyproject.toml  requirements.txt
data/test/: test.csv
data/test/almond/: annotations.json
data/test/button/: annotations.json
data/test/capsule/: annotations.json
data/test/chocolate/: annotations.json
data/test/circle-glass-marble/: annotations.json
data/test/coffee-bean/: annotations.json
data/test/coin-battery/: annotations.json
data/test/dice/: annotations.json
data/test/grape/: annotations.json
data/test/gum/: annotations.json
data/test/leaf/: annotations.json
data/test/led/: annotations.json
data/test/lego-block/: annotations.json
data/test/macaroni/: annotations.json
data/test/mini-tomato/: annotations.json
data/test/nuts/: annotations.json
data/test/red-bean/: annotations.json
data/test/tablet/: annotations.json
data/test/terminal-block/: annotations.json
data/test/voltage-regulator/: annotations.json
ismr/: baselines.py  dataset.py  evaluator.py  models.py  utils.py
